--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--<link rel="stylesheet" href="CSS/stylesheet.css">-->
+    <link rel="stylesheet" href="CSS/stylesheet.css">
     <meta charset="UTF-8">
     <title>Bachelor Website</title>
 </head>
